# mpv_stt_plugin_rs

./: .gitignore  Cargo.toml  FEATURES.md  README.md  build.rs  log
.cargo/: config.toml
scripts/: build-android-all.sh  build-android.sh  cargo-with-mpv.sh
src/: audio.rs  config.rs  crypto.rs  error.rs  fast_whisper.rs  ffi.rs  lib.rs  opusenc_shim.c  plugin.rs  process.rs  srt.rs  subtitle_manager.rs  translate.rs  whisper.rs  whisper_cpp.rs
src/stt/: local_whisper.rs  mod.rs  remote_udp.rs
toolchains/: android-arm64.cmake  android.cmake
