[package]
name = "whispersubs_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
figment = { version = "0.10.19", features = ["env", "toml"] }
directories = "6.0.0"
tempfile = "3.24.0"
wait-timeout = "0.2.1"
parking_lot = "0.12.5"
srtlib = "0.2.0"
log = "0.4.29"
env_logger = "0.11.8"
mpv-client = "1.1.0"
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
tokio = { version = "1.48.0", features = ["rt", "time"] }
whisper-rs = { version = "0.15.1", optional = true }
hound = "3.5.1"
libc = "0.2.178"
futures = "0.3.31"
android_logger = "0.15.1"

[target.'cfg(not(target_os = "android"))'.dependencies]
ffmpeg-next = { git = "https://github.com/canxin121/rust-ffmpeg", features = [
    "build",
    "static",
    "software-resampling",
] }

[target.'cfg(target_os = "android")'.dependencies]
ffmpeg-next = { git = "https://github.com/canxin121/rust-ffmpeg" }

[features]
default = ["whisper_cpp_cpu"]
whisper_cpp_cpu = ["dep:whisper-rs"]
whisper_cpp_cuda = ["dep:whisper-rs", "whisper-rs/cuda"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
