[package]
name = "mpv_stt_plugin_rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
thiserror = "2.0.17"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
postcard = { version = "1.1.3", default-features = false, features = [
    "use-std",
] }
figment = { version = "0.10.19", features = ["env", "toml"] }
directories = "6.0.0"
tempfile = "3.24.0"
wait-timeout = "0.2.1"
parking_lot = "0.12.5"
srtlib = "0.2.0"
log = "0.4.29"
env_logger = "0.11.8"
mpv-client = "1.1.0"
translators = { version = "0.1.5", features = ["google", "tokio-async"] }
tokio = { version = "1.48.0", features = ["rt", "time"] }
whisper-rs = { version = "0.15.1", optional = true }
hound = "3.5.1"
libc = "0.2.178"
futures = "0.3.31"
android_logger = "0.15.1"
aes-gcm = "0.10.3"
sha2 = "0.10.9"
rand = "0.9.2"
libopusenc-static-sys = { git = "https://github.com/canxin121/libopusenc-static-sys", optional = true }

[build-dependencies]
cc = "1.1.31"

[target.'cfg(not(target_os = "android"))'.dependencies]
ffmpeg-next = { git = "https://github.com/canxin121/rust-ffmpeg", features = [
    "build",
    "static",
    "software-resampling",
] }

[target.'cfg(target_os = "android")'.dependencies]
ffmpeg-next = { git = "https://github.com/canxin121/rust-ffmpeg" }

[features]
default = ["stt_local_cpu"]
stt_local_cpu = ["dep:whisper-rs"]
stt_local_cuda = ["dep:whisper-rs", "whisper-rs/cuda"]
stt_remote_udp = ["dep:libopusenc-static-sys"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
